# c-lab-shaker-sort

./: .gitignore  CMakeLists.txt  README.md
include/: compare.h  constants.h  io.h  search.h  sort.h  table.h
src/: compare.c  io.c  main.c  search.c  sort.c  table.c
tests/: random.txt  reversed.txt  sorted.txt
